--- a/PjtExt/package.json
+++ b/PjtExt/package.json
@@ -12,7 +12,8 @@
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "~51.0.28",
+    "@types/react": "~18.2.79",
+    "expo": "^51.0.38",
     "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
@@ -23,8 +24,7 @@
     "react-native-screens": "^3.31.1",
     "react-native-sqlite-storage": "^6.0.1",
     "react-navigation": "^5.0.0",
-    "typescript": "~5.3.3",
-    "@types/react": "~18.2.79"
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
