--- a/PjtExt/package.json
+++ b/PjtExt/package.json
@@ -27,7 +27,8 @@
     "typescript": "~5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react-native": "^0.72.8"
   },
   "private": true
 }
